--- a/src/CropChemicalsModal/CultureDropdown/index.module.scss
+++ b/src/CropChemicalsModal/CultureDropdown/index.module.scss
@@ -1,4 +1,8 @@
 .cultureDropdown {
+  position: absolute;
+  top: calc(100% + 4px);
+  left: 0;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   width: 320px;
@@ -6,9 +10,10 @@
   border-width: 1px;
   opacity: 1;
   border-radius: 8px;
-  gap: 8px;
+  gap: 16px;
   padding: 8px;
   border: 1px solid #B2B2B2;
+  background-color: white;
   box-shadow: -2px -2px 8px 0px #0000001F;
   overflow-y: auto; 
 
