--- a/src/CropChemicalsModal/ModalChemicalModal.module.scss
+++ b/src/CropChemicalsModal/ModalChemicalModal.module.scss
@@ -23,7 +23,21 @@
   padding: 2rem;
   width: 98%;
   height: 98%;
-  overflow-y: auto;
+
+
+  overflow: auto;                 
+  -ms-overflow-style: none;    
+  scrollbar-width: none;         
+  -webkit-overflow-scrolling: touch; 
+
+
+  &::-webkit-scrollbar {
+    display: none;                
+    width: 0;
+    height: 0;
+    background: transparent;
+  }
+
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
 
   @media (max-width: 768px) {
