--- a/src/CropChemicalsModal/CultureSelect/index.module.scss
+++ b/src/CropChemicalsModal/CultureSelect/index.module.scss
@@ -1,43 +1,60 @@
-.cultureSelect{
-display: flex;
-flex-direction: column;
+.cultureSelect {
+  display: flex;
+  flex-direction: column;
 }
 
-.cultureSelect__label{
-padding-left: 20px;
-padding-bottom: 2px;
-color:  #5F5F5F;
-font-family: Rubik;
-font-weight: 400;
-font-style: Regular;
-font-size: 12px;
-line-height: 100%;
-letter-spacing: 0%;
-vertical-align: middle;
-
+.cultureSelect__label {
+  padding-left: 20px;
+  padding-bottom: 2px;
+  color: #5F5F5F;
+  font-family: Rubik;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 12px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  vertical-align: middle;
 }
 
-.cultureSelect__trigger{
-font-family: Rubik;
-font-weight: 400;
-font-style: Regular;
-font-size: 14px;
-line-height: 150%;
-letter-spacing: 0%;
-vertical-align: middle;
-display: flex;
-align-items: center;
-justify-content: space-between;
-width: 316px;
-height: 48px;
-border-width: 1px;
-opacity: 1;
-border-radius: 8px;
-gap: 4px;
-padding-top: 4px;
-padding-bottom: 4px;
-padding-left: 16px;
- color: #989898;
-border: 1px solid #5F5F5F;
-cursor: pointer;
+.cultureSelect__trigger {
+  font-family: Rubik;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 14px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  vertical-align: middle;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 316px;
+  height: 48px;
+  border: 1px solid #5F5F5F;
+  border-radius: 8px;
+
+  gap: 4px;
+  padding: 4px 8px 4px 16px;
+
+
+  cursor: pointer;
+}
+
+
+.cultureSelect__value {
+  flex: 1 1 auto;   
+  min-width: 0;     
+  overflow: hidden;   
+  text-overflow: ellipsis; 
+  white-space: nowrap;     
+  color: #989898;
+}
+
+.cultureSelected__value{
+    color:black;
+}
+
+.cultureSelect__trigger > svg {
+  flex: 0 0 auto;
 }
